<resources>
    <string name="app_name">RecyclerViewDemo</string>
    <string name="action_settings">Settings</string>
    <string name="action_list">List显示</string>
    <string name="action_grid">Grid显示</string>
    <string name="action_staggered">Staggered显示</string>
    <string name="normal">标准</string>
    <string name="vertical_reverse">垂直反向</string>
    <string name="horizontal">水平</string>
    <string name="horizontal_reverse">水平反向</string>
</resources>
