<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.vee.recyclerviewdemo.MainActivity">
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/action_list"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/list_normal"
                android:orderInCategory="100"
                android:title="@string/normal"/>
            <item
                android:id="@+id/list_vertical_reverse"
                android:orderInCategory="100"
                android:title="@string/vertical_reverse"/>
            <item
                android:id="@+id/list_horizontal"
                android:orderInCategory="100"
                android:title="@string/horizontal"/>
            <item
                android:id="@+id/list_horizontal_reverse"
                android:orderInCategory="100"
                android:title="@string/horizontal_reverse"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_grid"
        android:orderInCategory="100"
        android:title="@string/action_grid"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/grid_normal"
                android:orderInCategory="100"
                android:title="@string/normal"/>
            <item
                android:id="@+id/grid_vertical_reverse"
                android:orderInCategory="100"
                android:title="@string/vertical_reverse"/>
            <item
                android:id="@+id/grid_horizontal"
                android:orderInCategory="100"
                android:title="@string/horizontal"/>
            <item
                android:id="@+id/grid_horizontal_reverse"
                android:orderInCategory="100"
                android:title="@string/horizontal_reverse"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_staggered"
        android:orderInCategory="100"
        android:title="@string/action_staggered"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/staggered_normal"
                android:orderInCategory="100"
                android:title="@string/normal"/>
            <item
                android:id="@+id/staggered_vertical_reverse"
                android:orderInCategory="100"
                android:title="@string/vertical_reverse"/>
            <item
                android:id="@+id/staggered_horizontal"
                android:orderInCategory="100"
                android:title="@string/horizontal"/>
            <item
                android:id="@+id/staggered_horizontal_reverse"
                android:orderInCategory="100"
                android:title="@string/horizontal_reverse"/>
        </menu>
    </item>
</menu>
